# SPDX-FileCopyrightText: 2025 Dom Rodriguez <Dom.Rodriguez@codethink.co.uk>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "to-sbom"
authors = ["Dom Rodriguez <Dom.Rodriguez@codethink.co.uk>"]
description = "Utility for scanning software projects, and generating a SPDX-compliant SBOM."
edition = "2021"
readme = "README.md"
repository = "https://github.com/shymega/to-sbom"
rust-version = "1.82.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive", "string", "env"] }
env_logger = "0.11.6"
log = "0.4.25"
serde-cyclonedx = "0.9.1"
serde-spdx = "0.9.1"
serde_json = "1.0.138"
spdx = "0.10.8"
spdx-rs = "0.5.5"
thiserror = "2.0.11"
